@@ -192,6 +192,7 @@ public class Http2SolrClient extends SolrClient {
       this.parser = builder.responseParser;
     }
     updateDefaultMimeTypeForParser();
+    this.defaultCollection = builder.defaultCollection;
     if (builder.requestTimeoutMillis != null) {
       this.requestTimeoutMillis = builder.requestTimeoutMillis;
     } else {
@@ -556,6 +557,7 @@ public class Http2SolrClient extends SolrClient {
       throws SolrServerException, IOException {
 
     solrRequest = unwrapV2Request(solrRequest);
+    if (collection == null) collection = defaultCollection;
     String url = getRequestPath(solrRequest, collection);
     Throwable abortCause = null;
     Request req = null;
@@ -1110,6 +1112,7 @@ public class Http2SolrClient extends SolrClient {
     private ExecutorService executor;
     protected RequestWriter requestWriter;
     protected ResponseParser responseParser;
+    protected String defaultCollection;
     private Set<String> urlParamNames;
     private CookieStore cookieStore = getDefaultCookieStore();
     private String proxyHost;
@@ -1231,6 +1234,12 @@ public class Http2SolrClient extends SolrClient {
     /** Provides a {@link ResponseParser} for created clients to use when handling requests. */
     public Builder withResponseParser(ResponseParser responseParser) {
       this.responseParser = responseParser;
+      return this;
+    }
+
+    /** Sets a default collection for collection-based requests. */
+    public Builder withDefaultCollection(String defaultCollection) {
+      this.defaultCollection = defaultCollection;
       return this;
     }
 
