@@ -41,6 +41,7 @@ public abstract class SolrClientBuilder<B extends SolrClientBuilder<B>> {
   protected int socketTimeoutMillis = 120000; // 120 seconds
   private boolean socketTimeoutMillisUpdate = false;
   protected boolean followRedirects = false;
+  protected String defaultCollection;
   protected Set<String> urlParamNames;
 
   /** The solution for the unchecked cast warning. */
@@ -94,6 +95,11 @@ public abstract class SolrClientBuilder<B extends SolrClientBuilder<B>> {
 
   public B withFollowRedirects(boolean followRedirects) {
     this.followRedirects = followRedirects;
+    return getThis();
+  }
+
+  public B withDefaultCollection(String defaultCollection) {
+    this.defaultCollection = defaultCollection;
     return getThis();
   }
 
